# ExamDataManager

./: .gitignore  .pdm-python  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.gitea/workflows/: main.yml
app/: main.py
app/api/: api.py
app/api/endpoints/: employees.py  excel.py
app/core/: config.py  exception_handlers.py  exceptions.py  responses.py
app/db/: deps.py  mongodb.py
app/services/: employee_service.py  fee_service.py
app/utils/: excel.py  openai_client.py
scripts/: excel_utils.py  handle_kaochang_info.py  handle_user_info.py  test_excel_utils.py  test_output.xlsx
tests/: test_api_endpoints.py  test_excel_async.py
