[project]
name = "ExamDataManager"
version = "0.1.0"
description = "A comprehensive tool for managing exam data, processing user information, and handling exam venue details"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "motor>=3.3.1",
    "pymongo>=4.6.0",
    "python-multipart>=0.0.6",
    "openpyxl>=3.1.2",
    "pandas>=2.1.3",
    "httpx>=0.28.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
"Homepage" = "https://github.com/yourusername/ExamDataManager"
"Bug Tracker" = "https://github.com/yourusername/ExamDataManager/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
]
